@@ -1,5 +1,8 @@
 2006-01-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scm/define-markup-commands.scm (with-dimensions):
+	with-dimensions markup command.
+
 	* input/test/font-table.ly: use it.
 
 	* lily/open-type-font.cc (glyph_list): new function.
